css/style.css
body {
	font-family: "Fira Sans","Helvetica Neue",Helvetica,Arial,sans-serif !important;
	font-style: normal;
	text-rendering: optimizelegibility;
	font-weight: 300;
}

h1, h2, h3, h4, h5, h6 {
	font-weight: 300;
}

.lead {
	font-weight: 200;
}

.lead > a {
	color: #368CCA;
}

.limit-width {
	max-width: 1170px;
}

.navbar {
	background: #ECF0F1;
	border-color: #ECF0F1;
	margin-bottom: 0;
	border-radius: 0;
}

@media (min-width: 768px) {
	.navbar {
		height: 70px;
	}
}

.nav {
	margin-top: 8px;
}

.nav > li > a {
	color: #414141;
}

.navbar .navbar-toggle .icon-bar {
	background: #414141;
}

.nav > li > a:focus, .nav > li > a:hover {
	text-decoration: underline;
}

.navbar-brand {
	padding: 0;
}

.navbar-brand img {
	height: 50px;
	padding-top: 10px;
	margin-left: 10px;
}

section {
	padding: 45px 25px;
}

@media (max-width: 768px) {
	* {
		text-align: center
	}

	.navbar-brand img {
		padding-bottom: 10px;
	}

	section {
		padding: 15px 15px 0px;
	}
}

.lead {
	margin-bottom: 0;
	padding-bottom: 20px;
}

#cover {
	background: #414141;
	color: #DCDCDC;
	text-align: center;
}

@media (min-width: 768px) {
	#cover {
		height: calc(100vh - 70px);
		max-height: 800px;
		display: flex;
		align-items: center;
		text-align: left;
	}

	#cover-line {
		display: flex;
		align-items: center;
		align-content: center;
	}
	.dl {
		max-height: 600px!important;
	}
	.tinynav > ul {
		display: none;
		}
}

#cover-line img {
	height: 280px;
	width: calc(100% - 5px);
	margin: 10px;
}

#cover-line .header {
	color: #F5AD1A;
}

#cover-line .button {
	font-weight: 400;
	cursor: pointer;
	display: inline-block;
	padding: 0px 1em;
	border-radius: 3px;
	text-align: center;
	line-height: 2.3em;
	font-size: 18px;
	margin-right: 5px;
	margin-bottom: 10px;
	text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
	box-shadow: 0px 0.1em 0px rgba(255, 255, 255, 0.1) inset, 0px -0.15em 0px rgba(0, 0, 0, 0.2) inset, 0px 0.15em 0px rgba(0, 0, 0, 0.075);
	transition: 0.4s;
}

@media (max-width: 768px) {
	#cover-line .button {
		margin-bottom: 15px;
	}
}

#cover-line .button:active {
	box-shadow: 0px 0.1em 0px rgba(255, 255, 255, 0.1) inset, 0px -0.10em 0px rgba(0, 0, 0, 0.2) inset, 0px 0.15em 0px rgba(0, 0, 0, 0.075);
}

#cover-line .button.learn-more {
	background: #5DBA9E;
	color: #fff;
}

#cover-line .button.learn-more:hover {
	background: #69D1B2;
	color: #fff;
	text-decoration: none;
}

#cover-line .button.download {
	background: #FFBA2B;
	color: #fff;
}

#cover-line .button.download:hover {
	background: #FFC44C;
	color: #fff;
	text-decoration: none;
}

#screenshot {
	background: #ECF0F1;
	color: #414141;
	text-align: center;
}

#screenshot .screenshot {
	width: 100%;
	max-width: 900px;
}

#screenshot .screenshot.mobile {
	display: none;
	margin: auto;
	max-width: 300px;
}

@media (max-width: 550px) {
	#screenshot .screenshot {
		display: none;
	}
	#screenshot .screenshot.mobile {
		display: block;
	}
}

.features {
	background: #fff;
	color: #414141;
	text-align: center;
}

.features .icon {
	font-size: 40px;
	cursor: default;
}

#about {
	background: #414141;
	color: #DCDCDC;
	text-align: center;
}

#about .container-fluid {
	max-width: 850px;
}

#about .header {
	color: #F5AD1A;
	margin-top: 0;
}

#footer {
	background: #414141;
	color: #DCDCDC;
}

#footer .cc {
	text-align: right;
	font-size: 15px;
	width: 280px;
	margin-bottom: 13px;
}

#footer .cc img {
	margin-bottom: 5px;
}

#footer .cc a {
	color: #F5AD1A;
}

#footer .cc a:hover {
	color: #FFC44C;
	text-decoration: none;
}

#footer .soc-med {
	margin-top: 30px;
}

#footer .soc-med a {
	color: #F5AD1A;
}

#footer .soc-med a:hover {
	color: #FFC44C;
}

#footer .languages {
	margin-bottom: 25px;
}

.soc-med .icon {
	font-size: 30px;
	margin-right: 10px;
}

@media screen and (max-width: 490px) {
	#footer .cc {
		width: 88px;
	}

	#footer .cc p {
		display: none;
	}

	#footer .soc-med {
		top: 30px;
		margin-top: 0;
	}
}
.modalDialog {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.8);
    z-index: 99999;
    opacity:0;
    -webkit-transition: opacity 200ms ease-in;
    -moz-transition: opacity 200ms ease-in;
    transition: opacity 200ms ease-in;
    pointer-events: none;
}
.modalDialog:target {
    opacity:1;
    pointer-events: auto;
}
.modalDialog > div {
    width: 90%;
    max-width: 700px;
    max-height: 90%;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    margin-top: 60px;
    padding: 5px 20px 13px 20px;
    background: #fff;
    border-radius: 3px;
    overflow-y: auto;    
}
.close {
    color: #000;
    line-height: 25px;
    position: absolute;
    right: 0px;
    text-align: center;
    top: 0px;
    width: 24px;
    text-decoration: none;
    font-weight: bold;
}
section.tabsection {
	display: -webkit-flex;
	display: flex;
	-webkit-flex-wrap: wrap;
	flex-wrap: wrap;
	padding-top: 5px;
}
label.tablabel {
	background-color: #ddd;
	padding: 3em 3em;
	cursor: pointer;
	z-index: 1;
	margin-right: auto;
	margin-left: auto;
	margin-bottom: 10px;
	border-radius: 3px;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	transition:.2s ease-out;
}
label.tablabel:hover {
	opacity:0.7;
	transition:.2s;
}
div.tabdiv {
	width: 100%;
	padding: 1em;
	-webkit-order: 1;
	order: 1;
	margin-top: 5px;
}
input[type=radio], div.tabdiv {
	display: none;
}
input[type=radio]:checked + label {
	color: #fff;
	background-color: #414141;
	opacity:1;
	cursor: default;
}
input[type=radio]:checked + label.tablabel + div {
	display: block;
}
#hamlabel {
	font-size: 1.5em;
	cursor: pointer;
}
.tinynav {
	float: none;
	font-weight: 400;
}
.tinynav > ul > li > a {
	line-height: 1.8em;
}
input[type=checkbox], .tinynav {
	display:none;
}

input[type=checkbox]:checked + label + .tinynav {
	display: inline-block;
}
input[type=checkbox]:checked ~ #hamlabel:before {
	content: '\000d7';
}
.socialbutton {
	font-weight: 400;
	cursor: pointer;
	display: inline-block;
	padding: 0px 1em;
	border-radius: 3px;
	text-align: center;
	line-height: 2.3em;
	font-size: 18px;
	margin-right: 5px;
	margin-bottom: 10px;
	text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
	box-shadow: 0px 0.1em 0px rgba(255, 255, 255, 0.1) inset, 0px -0.15em 0px rgba(0, 0, 0, 0.2) inset, 0px 0.15em 0px rgba(0, 0, 0, 0.075);
	transition: 0.4s;
	float: left;
}
.socialbutton:active {
	box-shadow: 0px 0.1em 0px rgba(255, 255, 255, 0.1) inset, 0px -0.10em 0px rgba(0, 0, 0, 0.2) inset, 0px 0.15em 0px rgba(0, 0, 0, 0.075);
}
.socialbutton.tweet {
	background: #00B0ED;
	color: #fff;
}
.socialbutton.facebook {
	background: #3A5795;
	color: #fff;
}
.socialbutton.diaspora {
	background: #414141;
	color: #fff;
}
.socialquote {
	position: relative;
	background: #ddd;
	border: 2px solid #ddd;
	padding: 5px;
	border-radius: 3px;
	font-style: italic;
	margin-bottom: 15px;
	cursor: default;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.socialquote:after, .socialquote:before {
	top: 100%;
	left: 31px;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}
.socialquote:after {
	border-color: rgba(255, 255, 255, 0);
	border-top-color: #ddd;
	border-width: 10px;
	margin-left: -10px;
}
.socialquote:before {
	border-color: rgba(221, 221, 221, 0);
	border-top-color: #ddd;
	border-width: 13px;
	margin-left: -13px;
}
.socialquote:before:before {
	content: "sadsad";
}

